--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ ansicolortags
 sphinx_pyreverse
 sphinx_git
 sphinx_tabs
+#sphinxcontrib-autorun
+#sphinxcontrib-bitbucket
+#sphinxcontrib-cheeseshop
+#sphinxcontrib-gnuplot
+#sphinxcontrib-youtube
